fix backdrop not showing

--- a/src/app/styl/views/movie_detail.styl
+++ b/src/app/styl/views/movie_detail.styl
@@ -24,9 +24,10 @@
         opacity: 0
         background-position-x 50%
         background-position-y -33px
-        -webkit-filter: blur(15px) brightness(0.7)^M
+        -webkit-filter: blur(15px) brightness(0.7)
         background-repeat: no-repeat
         background-size: cover
+
         &.fadein
             transition: opacity .3s ease-in;
             opacity: 1
